[tool.poetry]
name = "bloom"
version = "0.1.0"
description = "a compact library for discord."
authors = ["A5rocks <git@helvetica.moe>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.19.0"
trio-websocket = "^0.9.2"
attrs = "^21.2.0"
cattrs = "^1.7.1"
httpx = "^0.18.2"

typing-extensions = { version = "^3.10.0", python = "~3.7" }

[tool.poetry.dev-dependencies]
# docs
Sphinx = "^4.1.2"
furo = "^2021.7.28b40"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-trio = "^1.1.2"

# dev
mypy = "^0.910"
isort = "^5.9.2"
flake8 = "^3.9.2"
pylint = "^2.9.6"
black = "^21.10b0"

# stubs
trio-typing = "^0.5.1"
typing-extensions = "^3.10.0"

# testing
pytest = "^6.2.4"
pytest-trio = "^0.7.0"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = 3.7
mypy_path = "stubs"
show_error_codes = true
pretty = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "99"

[tool.black]
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
line-length = 99
