[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bloom"
authors = [{name = "A5rocks", email = "git@helvetica.moe"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["description"]
requires-python = ">=3.8"
version = "9.22.2"
dependencies = [
	"trio>=0.19",
	"trio-websocket>=0.9.2",
	"attrs>=21.2.0",
	"cattrs>=1.7.1",
	"httpx>=0.21.1",
	# I will need this for ParamSpec:
	#"typing-extensions>=3.10.0; python_version <= '3.10'",
]

[project.optional-dependencies]
docs = [
	"Sphinx>=4.1.2",
	"furo>=2021.7.28b40",
	"sphinx-autobuild>=2021.3.14",
	"sphinxcontrib-trio>=1.1.2",
]

dev = [
	# lints/formatters
	"mypy>=0.930",
	"isort>=5.9.2",
	"flake8>=3.9.2",
	"pylint>=2.9.6",
	"black>=21.10b0",

	# stubs
	"trio-typing>=0.5.1",
	"typing-extensions>=3.10.0",

	# misc
	"ipython>=7.26.0",
]

test = [
	"pytest>=6.2.4",
	"pytest-trio>=0.7.0",
]

[project.urls]
Home = "https://github.com/A5rocks/bloom"

[tool.mypy]
strict = true
python_version = 3.8
mypy_path = "stubs"
show_error_codes = true
pretty = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "99"

[tool.black]
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
line-length = 99
